[package]
name = "counter-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
env_logger = "0.11.5"
http = "1.1.0"
httparse = "1.9.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
